--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "cross-fetch": "^3.1.5",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
